--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<HTML>
+<HTML lang="en">
     <HEAD>
-        <TITLE>States</TITLE>
+        <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
         <H1>States</H1>
+	<p>states</p>
         <UL>
-        {% for state in states %}
-        <LI>{{ state.id }}: {{ state.name }}
-            <UL>
-            {% for city in state.cities %}
-            <LI>{{ city.id }}: {{ city.name }}</LI>
-            {% endfor %}
-            </UL>
-        </LI>
+        {% for state in states.values()|sort(attribute='name') %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
+	        <UL>
+                {% for city in state.cities|sort(attribute='name') %}
+                        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                {% endfor %}
+                </UL>
+	    </LI>
         {% endfor %}
         </UL>
     </BODY>
